--- a/styles/style.css
+++ b/styles/style.css
@@ -40,9 +40,8 @@ header p {
     color: #FFF;
     text-align: right;
     font-size: 16px;
-    font-style: normal;
-    line-height: 26px;
-    font-weight: 200px;
+    margin-top: 10px;
+    margin-left: 30px;
 }
 
 header button {
@@ -52,7 +51,8 @@ header button {
     background: #FFF;
     border: none;
     color: #005FAC;
-    margin-right: 30px;
+    margin-right: 10px;
+    margin-top: 20px;
     font-size: 15px;
     cursor: pointer;
 }
@@ -98,36 +98,73 @@ header button {
 
 ul {
     list-style: none;
+
+}
+
+ul li {
+    margin: 20px;
 }
 
 ul li:before {
     content: '✓';
     color: #16D887;
     margin-right: 5px;
+
 }
 
 /* planning part design */
-.plan-title{
-color:#151414;
-text-align: center;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+.plan-title {
+    color: #151414;
+    text-align: center;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 
-.plan-list{
+.plan-list {
     display: flex;
     justify-content: space-around;
     margin-top: 60px;
-    margin-bottom: 40px;
+    margin-bottom: 150px;
     text-align: center;
 }
-.plan-para{
-color:#737272;
-text-align: center;
-font-size: 25px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+
+.plan-para {
+    color: #737272;
+    text-align: center;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.moto-container {
+    background-image: url(../image/gradient1.png), url(../image/watch.png);
+    background-repeat: no-repeat;
+    width: 1140px;
+    height: 300px;
+    border-radius: 8px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-top: 50px;
+
+}
+
+.moto-title {
+    display: flex;
+    width: 459px;
+    color: #FFF;
+    font-size: 40px;
+    line-height: normal;
+    margin-bottom: 20px;
+}
+.moto-btn{
+width: 140px;
+height: 50px;
+border-radius: 5px;
+background: #FFF;
+color:#005FAC;
+border: none;
+font-size: 15px;
 }
