--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
 .banner-container {
     background-image: url(../image/banner3.png);
     background-size: cover;
-    width: 1600px;
+    width: 1700px;
     height: 808px;
     background-repeat: no-repeat;
 
@@ -167,17 +167,19 @@ background: #FFF;
 color:#005FAC;
 border: none;
 font-size: 15px;
+cursor: pointer;
 }
 
 /* footer design */
 .footer-container{
 display: flex;
-width: 1600px;
+width: 1700px;
 height: 400px;
 background:#151414;
 color: white;
 justify-content: space-around;
 align-items: center;
+margin-top: 50px;
 }
 
 .footer-div1{
